--- a/report_template.html
+++ b/report_template.html
@@ -16,7 +16,7 @@
     <h1>Brachytherapy Evaluation Report</h1>
     <p><strong>Patient Name:</strong> {{ patient_name }}</p>
     <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
-    <p><strong>Treatment Site:</strong> {{ treatment_site }}</p>
+    <p><strong>Plan Name:</strong> {{ plan_name }}</p>
     <p><strong>Brachytherapy Dose per Fraction:</strong> {{ brachy_dose_per_fraction }} Gy</p>
     <p><strong>Number of Fractions:</strong> {{ number_of_fractions }}</p>
     <p><strong>EBRT Dose:</strong> {{ ebrt_dose }} Gy</p>
@@ -32,6 +32,7 @@
                 <th>BED (Gy)</th>
                 <th>EQD2 (Gy)</th>
                 <th>EQD2 Constraint Met</th>
+                <th>Dose to Meet Constraint (Gy)</th>
             </tr>
         </thead>
         <tbody>
