feat: Incorporate previous brachytherapy data from HTML reports
This commit introduces the ability to incorporate EQD2 values from previous brachytherapy treatments by parsing existing HTML reports. This allows for a more accurate cumulative dose assessment.

Key changes include:
- Added `html_parser.py` to parse HTML reports and extract organ-specific EQD2 data.
- Modified `gui.py` to allow users to select a previous HTML report.
- Updated `main.py` to read and pass the parsed previous brachytherapy EQD2 data to calculations.
- Modified `calculations.py` to incorporate previous brachytherapy EQD2 into total BED/EQD2 calculations and the "Dose to Meet Constraint" calculation.
- Updated `report_template.html` and `main.py` to display individual BED contributions (current plan, previous brachy, EBRT) for clarity.
- Updated `GEMINI.md` and `TODO.md` to reflect the completion of this feature.

--- a/report_template.html
+++ b/report_template.html
@@ -29,7 +29,9 @@
                 <th>Volume (cc)</th>
                 <th>D2cc (per fraction) (Gy)</th>
                 <th>D2cc (total) (Gy)</th>
-                <th>BED (Gy)</th>
+                <th>BED_this plan (Gy)</th>
+                <th>BED_previous Brachy (Gy)</th>
+                <th>BED_EBRT (Gy)</th>
                 <th>EQD2 (Gy)</th>
                 <th>EQD2 Constraint Met</th>
                 <th>Dose to Meet Constraint (Gy)</th>
