--- a/reports/Brachytherapy_Report.html
+++ b/reports/Brachytherapy_Report.html
@@ -14,14 +14,14 @@
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="Institution Logo" class="logo">
+    <img src="../src/assets/2020-flame-red-01.png" alt="Institution Logo" class="logo">
     <h1>Brachytherapy Evaluation Report</h1>
     <p><strong>Patient Name:</strong> DOE^JANE</p>
     <p><strong>Patient MRN:</strong> ANON93124</p>
     <p><strong>Plan Name:</strong> GP/Wood</p>
     <p><strong>Brachytherapy Dose per Fraction:</strong> 5.0 Gy</p>
     <p><strong>Number of Fractions:</strong> 5</p>
-    <p><strong>EBRT Dose:</strong> 45.0 Gy</p>
+    <p><strong>EBRT Dose:</strong> 0.0 Gy</p>
 
     <h2>Dose Volume Histogram (DVH) Results</h2>
     <table>
@@ -51,8 +51,8 @@
             <td>18.45</td>
             <td>41.14</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>69.69</td>
+            <td>0.0</td>
+            <td>24.69</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr><tr>
@@ -64,8 +64,8 @@
             <td>11.55</td>
             <td>20.44</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>57.27</td>
+            <td>0.0</td>
+            <td>12.27</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr><tr>
@@ -77,10 +77,10 @@
             <td>24.85</td>
             <td>66.02</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>84.61</td>
-            <td class="not-met">NOT Met</td>
-            <td>3.72</td>
+            <td>0.0</td>
+            <td>39.61</td>
+            <td class="met">Met</td>
+            <td>N/A</td>
         </tr><tr>
             <td>Bowel</td>
             <td>2.52</td>
@@ -90,8 +90,8 @@
             <td>7.7</td>
             <td>11.65</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>51.99</td>
+            <td>0.0</td>
+            <td>6.99</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr>
