--- a/reports/Brachytherapy_Report.html
+++ b/reports/Brachytherapy_Report.html
@@ -16,9 +16,9 @@
 <body>
     <img src="../src/assets/2020-flame-red-01.png" alt="Institution Logo" class="logo">
     <h1>Brachytherapy Evaluation Report</h1>
-    <p><strong>Patient Name:</strong> DOE^JANE</p>
-    <p><strong>Patient MRN:</strong> ANON93124</p>
-    <p><strong>Plan Name:</strong> GP/Wood</p>
+    <p><strong>Patient Name:</strong> ALBERT^MICHELLE^^^</p>
+    <p><strong>Patient MRN:</strong> A2512389</p>
+    <p><strong>Plan Name:</strong> 30mmCylinder</p>
     <p><strong>Brachytherapy Dose per Fraction:</strong> 5.0 Gy</p>
     <p><strong>Number of Fractions:</strong> 5</p>
     <p><strong>EBRT Dose:</strong> 0.0 Gy</p>
@@ -43,55 +43,55 @@
         </thead>
         <tbody>
             <tr>
-            <td>Bladder</td>
-            <td>24.18</td>
-            <td>0.0</td>
-            <td>3.99</td>
-            <td>3.69</td>
-            <td>18.45</td>
-            <td>41.14</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>24.69</td>
-            <td class="met">Met</td>
-            <td>N/A</td>
-        </tr><tr>
             <td>Rectum</td>
-            <td>13.74</td>
+            <td>77.33</td>
             <td>0.0</td>
-            <td>2.65</td>
-            <td>2.31</td>
-            <td>11.55</td>
-            <td>20.44</td>
+            <td>5.33</td>
+            <td>4.86</td>
+            <td>24.3</td>
+            <td>63.67</td>
             <td>0.0</td>
             <td>0.0</td>
-            <td>12.27</td>
+            <td>38.2</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr><tr>
             <td>Sigmoid</td>
-            <td>49.26</td>
+            <td>184.41</td>
             <td>0.0</td>
-            <td>5.87</td>
-            <td>4.97</td>
-            <td>24.85</td>
-            <td>66.02</td>
+            <td>5.93</td>
+            <td>4.91</td>
+            <td>24.55</td>
+            <td>64.73</td>
             <td>0.0</td>
             <td>0.0</td>
-            <td>39.61</td>
+            <td>38.84</td>
+            <td class="met">Met</td>
+            <td>N/A</td>
+        </tr><tr>
+            <td>Bladder</td>
+            <td>98.35</td>
+            <td>0.0</td>
+            <td>4.96</td>
+            <td>4.57</td>
+            <td>22.85</td>
+            <td>57.66</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>34.59</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr><tr>
             <td>Bowel</td>
-            <td>2.52</td>
+            <td>292.94</td>
             <td>0.0</td>
-            <td>1.93</td>
-            <td>1.54</td>
-            <td>7.7</td>
-            <td>11.65</td>
+            <td>1.33</td>
+            <td>1.18</td>
+            <td>5.9</td>
+            <td>8.22</td>
             <td>0.0</td>
             <td>0.0</td>
-            <td>6.99</td>
+            <td>4.93</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr>
