Modified the orientation of the organ volumes into rows.

--- a/reports/Brachytherapy_Report.html
+++ b/reports/Brachytherapy_Report.html
@@ -29,9 +29,8 @@
             <tr>
                 <th>Organ</th>
                 <th>Volume (cc)</th>
-                <th>D0.1cc (per fraction) (Gy)</th>
-                <th>D1cc (per fraction) (Gy)</th>
-                <th>D2cc (per fraction) (Gy)</th>
+                <th>Dose Metric</th>
+                <th>Value (per fraction) (Gy)</th>
                 <th>D2cc (total) (Gy)</th>
                 <th>BED_this plan (Gy)</th>
                 <th>BED_previous Brachy (Gy)</th>
@@ -43,57 +42,77 @@
         </thead>
         <tbody>
             <tr>
-            <td>Rectum</td>
-            <td>77.33</td>
+            <td rowspan="3">Rectum</td>
+            <td rowspan="3">77.33</td>
+            <td>D0.1cc</td>
             <td>0.0</td>
+            <td rowspan="3">24.3</td>
+            <td rowspan="3">63.67</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">38.2</td>
+            <td rowspan="3" class="met">Met</td>
+            <td rowspan="3">N/A</td>
+        </tr><tr>
+            <td>D1cc</td>
             <td>5.33</td>
+        </tr><tr>
+            <td>D2cc</td>
             <td>4.86</td>
-            <td>24.3</td>
-            <td>63.67</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>38.2</td>
-            <td class="met">Met</td>
-            <td>N/A</td>
         </tr><tr>
-            <td>Sigmoid</td>
-            <td>184.41</td>
+            <td rowspan="3">Sigmoid</td>
+            <td rowspan="3">184.41</td>
+            <td>D0.1cc</td>
             <td>0.0</td>
+            <td rowspan="3">24.55</td>
+            <td rowspan="3">64.73</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">38.84</td>
+            <td rowspan="3" class="met">Met</td>
+            <td rowspan="3">N/A</td>
+        </tr><tr>
+            <td>D1cc</td>
             <td>5.93</td>
+        </tr><tr>
+            <td>D2cc</td>
             <td>4.91</td>
-            <td>24.55</td>
-            <td>64.73</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>38.84</td>
-            <td class="met">Met</td>
-            <td>N/A</td>
         </tr><tr>
-            <td>Bladder</td>
-            <td>98.35</td>
+            <td rowspan="3">Bladder</td>
+            <td rowspan="3">98.35</td>
+            <td>D0.1cc</td>
             <td>0.0</td>
+            <td rowspan="3">22.85</td>
+            <td rowspan="3">57.66</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">34.59</td>
+            <td rowspan="3" class="met">Met</td>
+            <td rowspan="3">N/A</td>
+        </tr><tr>
+            <td>D1cc</td>
             <td>4.96</td>
-            <td>4.57</td>
-            <td>22.85</td>
-            <td>57.66</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>34.59</td>
-            <td class="met">Met</td>
-            <td>N/A</td>
         </tr><tr>
-            <td>Bowel</td>
-            <td>292.94</td>
+            <td>D2cc</td>
+            <td>4.57</td>
+        </tr><tr>
+            <td rowspan="3">Bowel</td>
+            <td rowspan="3">292.94</td>
+            <td>D0.1cc</td>
             <td>0.0</td>
+            <td rowspan="3">5.9</td>
+            <td rowspan="3">8.22</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">0.0</td>
+            <td rowspan="3">4.93</td>
+            <td rowspan="3" class="met">Met</td>
+            <td rowspan="3">N/A</td>
+        </tr><tr>
+            <td>D1cc</td>
             <td>1.33</td>
+        </tr><tr>
+            <td>D2cc</td>
             <td>1.18</td>
-            <td>5.9</td>
-            <td>8.22</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>4.93</td>
-            <td class="met">Met</td>
-            <td>N/A</td>
         </tr>
         </tbody>
     </table>
