feat: Refine report layout with alpha/beta column and consolidated constraint display

--- a/reports/Brachytherapy_Report.html
+++ b/reports/Brachytherapy_Report.html
@@ -28,6 +28,7 @@
         <thead>
             <tr>
                 <th>Organ</th>
+                <th>&alpha;/&beta;</th>
                 <th>Volume (cc)</th>
                 <th>Dose Metric</th>
                 <th>Value (per fraction) (Gy)</th>
@@ -43,6 +44,7 @@
         <tbody>
             <tr>
             <td rowspan="3">Rectum</td>
+            <td rowspan="3">3</td>
             <td rowspan="3">77.33</td>
             <td>D0.1cc</td>
             <td>0.0</td>
@@ -61,6 +63,7 @@
             <td>4.86</td>
         </tr><tr>
             <td rowspan="3">Sigmoid</td>
+            <td rowspan="3">3</td>
             <td rowspan="3">184.41</td>
             <td>D0.1cc</td>
             <td>0.0</td>
@@ -79,6 +82,7 @@
             <td>4.91</td>
         </tr><tr>
             <td rowspan="3">Bladder</td>
+            <td rowspan="3">3</td>
             <td rowspan="3">98.35</td>
             <td>D0.1cc</td>
             <td>0.0</td>
@@ -97,6 +101,7 @@
             <td>4.57</td>
         </tr><tr>
             <td rowspan="3">Bowel</td>
+            <td rowspan="3">3</td>
             <td rowspan="3">292.94</td>
             <td>D0.1cc</td>
             <td>0.0</td>
