Corrected the column header from "Value (per fraction) (Gy)" to "Dose (per fraction) (Gy)" and from "D2cc (total) (Gy)" to "Total Planned Dose (Gy)" in the HTML report

--- a/reports/Brachytherapy_Report.html
+++ b/reports/Brachytherapy_Report.html
@@ -31,8 +31,8 @@
                 <th>&alpha;/&beta;</th>
                 <th>Volume (cc)</th>
                 <th>Dose Metric</th>
-                <th>Value (per fraction) (Gy)</th>
-                <th>D2cc (total) (Gy)</th>
+                <th>Dose (per fraction) (Gy)</th>
+                <th>Total Planned Dose (Gy)</th>
                 <th>BED_this plan (Gy)</th>
                 <th>BED_previous Brachy (Gy)</th>
                 <th>BED_EBRT (Gy)</th>
