--- a/reports/Brachytherapy_Report.html
+++ b/reports/Brachytherapy_Report.html
@@ -21,7 +21,7 @@
     <p><strong>Plan Name:</strong> ANON</p>
     <p><strong>Brachytherapy Dose per Fraction:</strong> 5.0 Gy</p>
     <p><strong>Number of Fractions:</strong> 5</p>
-    <p><strong>EBRT Dose:</strong> 45.0 Gy</p>
+    <p><strong>EBRT Dose:</strong> 0.0 Gy</p>
 
     <h2>Dose Volume Histogram (DVH) Results</h2>
     <table>
@@ -49,20 +49,20 @@
             <td>D0.1cc</td>
             <td>0.0</td>
             <td>0.00</td>
-            <td>75.0</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>45.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
             <td></td>
             <td></td>
         </tr><tr>
             <td>D1cc</td>
             <td>3.99</td>
             <td>19.95</td>
-            <td>121.48</td>
+            <td>46.48</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>72.89</td>
+            <td>0.0</td>
+            <td>27.89</td>
             <td></td>
             <td></td>
         </tr><tr>
@@ -71,8 +71,8 @@
             <td>18.45</td>
             <td>41.14</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>69.69</td>
+            <td>0.0</td>
+            <td>24.69</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr><tr>
@@ -82,20 +82,20 @@
             <td>D0.1cc</td>
             <td>0.0</td>
             <td>0.00</td>
-            <td>75.0</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>45.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
             <td></td>
             <td></td>
         </tr><tr>
             <td>D1cc</td>
             <td>2.65</td>
             <td>13.25</td>
-            <td>99.95</td>
+            <td>24.95</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>59.97</td>
+            <td>0.0</td>
+            <td>14.97</td>
             <td></td>
             <td></td>
         </tr><tr>
@@ -104,8 +104,8 @@
             <td>11.55</td>
             <td>20.44</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>57.27</td>
+            <td>0.0</td>
+            <td>12.27</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr><tr>
@@ -115,20 +115,20 @@
             <td>D0.1cc</td>
             <td>0.0</td>
             <td>0.00</td>
-            <td>75.0</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>45.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
             <td></td>
             <td></td>
         </tr><tr>
             <td>D1cc</td>
             <td>5.87</td>
             <td>29.35</td>
-            <td>161.78</td>
+            <td>86.78</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>97.07</td>
+            <td>0.0</td>
+            <td>52.07</td>
             <td></td>
             <td></td>
         </tr><tr>
@@ -137,10 +137,10 @@
             <td>24.85</td>
             <td>66.02</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>84.61</td>
-            <td class="not-met">NOT Met</td>
-            <td>3.72</td>
+            <td>0.0</td>
+            <td>39.61</td>
+            <td class="met">Met</td>
+            <td>N/A</td>
         </tr><tr>
             <td rowspan="3">Bowel</td>
             <td rowspan="3">3</td>
@@ -148,20 +148,20 @@
             <td>D0.1cc</td>
             <td>0.0</td>
             <td>0.00</td>
-            <td>75.0</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>45.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
             <td></td>
             <td></td>
         </tr><tr>
             <td>D1cc</td>
             <td>1.93</td>
             <td>9.65</td>
-            <td>90.86</td>
+            <td>15.86</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>54.51</td>
+            <td>0.0</td>
+            <td>9.51</td>
             <td></td>
             <td></td>
         </tr><tr>
@@ -170,24 +170,208 @@
             <td>7.7</td>
             <td>11.65</td>
             <td>0.0</td>
-            <td>75.0</td>
-            <td>51.99</td>
+            <td>0.0</td>
+            <td>6.99</td>
             <td class="met">Met</td>
             <td>N/A</td>
         </tr>
         </tbody>
     </table>
 
-    <h2>Dose Reference Points</h2>
+    <h2>Point Dose Results</h2>
     <table>
         <thead>
             <tr>
                 <th>Point Name</th>
-                <th>Point Dose (Gy)</th>
+                <th>&alpha;/&beta;</th>
+                <th>Dose (per fraction) (Gy)</th>
+                <th>Total Planned Dose (Gy)</th>
+                <th>BED_this plan (Gy)</th>
+                <th>BED_previous Brachy (Gy)</th>
+                <th>BED_EBRT (Gy)</th>
+                <th>EQD2 (Gy)</th>
+                <th>EQD2 Constraint Met</th>
+                <th>Dose to Meet Constraint (Gy)</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td>Tip_app</td><td>4.640210</td></tr><tr><td>Shoulder_app</td><td>5.380987</td></tr><tr><td>A3</td><td>5.018747</td></tr><tr><td>A4</td><td>4.791644</td></tr><tr><td>A5</td><td>5.074309</td></tr><tr><td>A6</td><td>5.182316</td></tr><tr><td>A7</td><td>5.062160</td></tr><tr><td>3cm_app</td><td>4.849590</td></tr><tr><td>Tip</td><td>4.657846</td></tr><tr><td>Shoulder</td><td>5.391205</td></tr><tr><td>P3</td><td>5.022104</td></tr><tr><td>P4</td><td>4.781783</td></tr><tr><td>P5</td><td>5.065723</td></tr><tr><td>P6</td><td>5.173856</td></tr><tr><td>P7</td><td>5.056071</td></tr><tr><td>3cm</td><td>4.869308</td></tr>
+            <tr>
+            <td>Tip_app</td>
+            <td>3</td>
+            <td>4.64</td>
+            <td>23.20</td>
+            <td>59.09</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>35.45</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>Shoulder_app</td>
+            <td>3</td>
+            <td>5.38</td>
+            <td>26.90</td>
+            <td>75.16</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>45.10</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>A3</td>
+            <td>3</td>
+            <td>5.02</td>
+            <td>25.09</td>
+            <td>67.07</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>40.24</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>A4</td>
+            <td>3</td>
+            <td>4.79</td>
+            <td>23.96</td>
+            <td>62.22</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>37.33</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>A5</td>
+            <td>3</td>
+            <td>5.07</td>
+            <td>25.37</td>
+            <td>68.29</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>40.97</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>A6</td>
+            <td>3</td>
+            <td>5.18</td>
+            <td>25.91</td>
+            <td>70.67</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>42.40</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>A7</td>
+            <td>3</td>
+            <td>5.06</td>
+            <td>25.31</td>
+            <td>68.02</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>40.81</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>3cm_app</td>
+            <td>3</td>
+            <td>4.85</td>
+            <td>24.25</td>
+            <td>63.45</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>38.07</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>Tip</td>
+            <td>3</td>
+            <td>4.66</td>
+            <td>23.29</td>
+            <td>59.45</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>35.67</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>Shoulder</td>
+            <td>3</td>
+            <td>5.39</td>
+            <td>26.96</td>
+            <td>75.40</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>45.24</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>P3</td>
+            <td>3</td>
+            <td>5.02</td>
+            <td>25.11</td>
+            <td>67.15</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>40.29</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>P4</td>
+            <td>3</td>
+            <td>4.78</td>
+            <td>23.91</td>
+            <td>62.02</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>37.21</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>P5</td>
+            <td>3</td>
+            <td>5.07</td>
+            <td>25.33</td>
+            <td>68.10</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>40.86</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>P6</td>
+            <td>3</td>
+            <td>5.17</td>
+            <td>25.87</td>
+            <td>70.48</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>42.29</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>P7</td>
+            <td>3</td>
+            <td>5.06</td>
+            <td>25.28</td>
+            <td>67.89</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>40.73</td>
+            <td></td>
+            <td></td>
+        </tr><tr>
+            <td>3cm</td>
+            <td>3</td>
+            <td>4.87</td>
+            <td>24.35</td>
+            <td>63.86</td>
+            <td>0.00</td>
+            <td>0.00</td>
+            <td>38.32</td>
+            <td></td>
+            <td></td>
+        </tr>
         </tbody>
     </table>
 </body>
